--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ name = "zorpsh"
 path = "src/main.rs"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde_json = "1.0"
