--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ path = "src/main.rs"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
+rustyline = "12.0.0"
