--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 rustyline = "12.0.0"
+home = "0.5.5"
